Fix faq middle alignment

--- a/src/stylesheets/modules/_mod-faq.scss
+++ b/src/stylesheets/modules/_mod-faq.scss
@@ -69,7 +69,7 @@
   margin-top: 0;
   h4 {
     border-bottom: solid 2px $border-gray;
-    padding: 20px 70px 27px 0;
+    padding: 23px 70px 24px 0;
     margin: 0;
     &::after {
       @include position(absolute, $right: 0, $top: 50%);
